css/styles.css
/* GLOBALS */

html {
  scroll-behavior: smooth;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

p {
  padding: 0;
  margin: 0;
}

button {
  display: inline-block;
  border: none;
  padding: 0;
  margin: 0;
  text-decoration: none;
  line-height: 1;
  cursor: pointer;
  text-align: center;
  -webkit-appearance: none;
  -moz-appearance: none;
}

h1,
h2,
h3,
h4,
h5 {
  padding: 0;
  margin: 0;
}

/* VARIABLES */

:root {
  --orange-background: #d0a25f;
  --green: #4d8057;
  --dark-grey: #464343;
  --light-grey: #e5e5e5;
  --text-normal: 1rem;
  --text-h1: 2rem;
  --border: 1px solid;
}

/* CONTENT CONTAINER */

.content-container {
  max-width: 1920px;
  margin: 0 auto;
}

/* FLEX REUSABLES */

.flex {
  display: flex;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

/* MAIN ELEMENTS */

body {
  font-family: "Commissioner", sans-serif;
  font-size: 1rem;
  margin: 0;
  height: 100vh;
  width: 100%;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

header {
  display: flex;
  margin: 0;
  padding: 1rem 0.5rem;
  width: 100%;
  align-items: center;
  justify-content: space-between;
}

main {
  display: flex;
  color: black;
  width: 100%;
  height: fit-content;
  flex-grow: 1;
  flex-direction: column;
  align-items: center;
  align-content: center;
}

footer {
  width: 100%;
  padding-bottom: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 1rem;
  color: black;
  background-color: var(--orange-background);
  margin-top: auto;
}

/* OTHER ELEMENTS */

.page-title {
  font-family: "Square Peg";
  font-size: var(--text-h1);
}

h2 {
  margin: 1rem 0;
}

h4 {
  margin-top: 1rem;
}

.logo-container {
  display: flex;
  align-items: center;
  gap: 1rem;
  text-decoration: none;
  color: black;
}

.separator-line {
  border-left: var(--border) grey;
  margin: 0 auto;
  height: 30px;
}

.about-blog {
  display: flex;
  width: 90%;
  flex-direction: column;
  gap: 1rem;
}

.quick-link-containers {
  display: flex;
  flex-direction: column;
  width: 90%;
  gap: 1rem;
  margin: 2rem 0;
}

.quick-link-content {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  background-color: var(--orange-background);
  width: 100%;
  border-radius: 10px;
  align-items: center;
  padding: 0.5rem 0;
  box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
}

.footer-content {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.footer-content a {
  text-decoration: none;
  color: black;
}

.footer-content a:hover {
  text-decoration: underline;
}

.about-author,
.author-of {
  width: 90%;
  padding: 0.5rem;
  margin: 1rem 0;
  border-radius: 10px;
  background-color: var(--orange-background);
}

.about-author {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.author-grid0 {
  grid-area: author-grid0;
}

.author-grid1 {
  grid-area: author-grid1;
}

.author-grid2 {
  grid-area: author-grid2;
}

.author-grid3 {
  grid-area: author-grid3;
}

.author-of {
  display: grid;
  grid-template-rows: 1fr 1fr;
}

.author-image-title {
  gap: 2rem;
}

.btn {
  background-color: var(--green);
  box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
  width: 140px;
  height: 35px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 1rem;
}

.footer-copyright {
  align-self: flex-end;
  font-weight: bold;
}

.content-title {
  margin: 1rem 0;
  align-self: normal;
}

.card,
.card-small {
  width: 300px;
  background-color: var(--light-grey);
  box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
  border-radius: 5px;
  text-decoration: none;
  color: black;
  padding-bottom: 2rem;
}

.card a {
  text-decoration: none;
  color: black;
}

.card h3,
.card p {
  margin: 1rem 0 0 1rem;
}

.card-small {
  display: flex;
  height: 80px;
  padding-bottom: 0;
}

.card-small img {
  width: 50%;
  height: 100%;
}

.card-small-text {
  display: flex;
  flex-direction: column;
  margin: 0.5rem 0 0 1rem;
}

.blog-card {
  width: auto;
  min-width: 300px;
}

.carousel-container {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.blog-page-content {
  display: grid;
  margin: 1rem 0;
  width: 90%;
  grid-gap: 3rem;
  grid-template-areas:
    "blog-grid1"
    "blog-grid2"
    "blog-grid3"
    "blog-grid4";
}

.blog-grid1 {
  grid-area: blog-grid1;
}

.blog-grid2 {
  grid-area: blog-grid2;
}

.blog-grid3 {
  grid-area: blog-grid3;
}

.blog-grid4 {
  grid-area: blog-grid4;
}

.blog-page-card {
  display: flex;
  flex-direction: column;
  background-color: var(--orange-background);
  box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
  border-radius: 10px;
  padding: 1rem;
}

.blog-page-content h3 {
  margin: 1rem 0;
}

.blog-author-info {
  display: flex;
  gap: 1rem;
}

.blog-author-info p {
  font-size: 0.8rem;
}

.author-name-title {
  margin-top: 0;
  margin-bottom: 1rem;
}

.blog-post-info {
  margin-top: 2rem;
  font-size: 0.9rem;
  align-self: center;
}

.index-list-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.previous-articles-link {
  text-decoration: none;
  color: black;
}

.previous-articles-link:hover {
  text-decoration: underline;
}

.blog-list-container {
  display: grid;
  margin-bottom: 2rem;
  gap: 1rem;
  grid-template-columns: 1fr;
}

/* NAVIGATION */

.navbar {
  display: none;
}

/* FORMS */

.validator-container {
  display: none;
  border: var(--border) green;
  color: green;
  width: 300px;
  margin: 1rem auto;
  padding: 0.3rem 0.5rem;
  text-align: center;
}

.form-error {
  display: none;
  color: red;
  font-size: 0.8rem;
  margin-bottom: 1rem;
}

.contact-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-decoration: none;
  color: black;
  border: 1px solid black;
  padding: 1rem;
  border-radius: 10px;
  background-color: var(--orange-background);
  width: 90%;
  margin-bottom: 1rem;
}

.contact-form input,
.message-input {
  width: 100%;
  margin: 0.5rem 0;
  padding: 0.5rem;
  font-size: 1rem;
}

.form-btn {
  color: black;
  margin: 1rem 0;
}

/* IMAGES */

.header-image {
  width: 100%;
  height: 200px;
}

.about-image {
  width: 100%;
}

.user-profile-image {
  width: 100px;
  height: 100px;
  border-radius: 50%;
}

.card-image {
  width: 100%;
  height: 200px;
}

.blog-page-banner {
  width: 100%;
}

.blog-page-banner-image {
  width: 100%;
  height: 250px;
}

/* ICONS */

.material-icons {
  position: relative;
  color: black;
}

.material-icons:hover {
  cursor: pointer;
}

.material-icons.md-48 {
  font-size: 3rem;
}

.material-icons.md-36 {
  font-size: 2.25rem;
}

.material-icons.md-24 {
  font-size: 1.5rem;
}

.material-icons.md-18 {
  font-size: 1.12rem;
}

.page-logo {
  color: var(--green);
  text-align: center;
  font-size: 36px;
}

.header-right-icons {
  display: flex;
  gap: 0.5rem;
}

.footer-icons {
  display: flex;
  justify-content: center;
  gap: 1rem;
  margin: 1rem 0;
}

.footer-icons i {
  font-size: 2rem;
}

/* LOADER */

.loader {
  border: 15px solid #f3f3f3;
  border-top: 15px solid purple;
  border-radius: 100%;
  width: 100px;
  height: 100px;
  animation: spin 2s linear infinite;
  margin: auto;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* HIDDEN TEXT FOR ACCESSIBILITY */

.visually-hidden:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* MEDIA QUERIES */

/* TABLET */

@media only screen and (min-width: 767px) {
}

/* DESKTOP */

@media only screen and (min-width: 1380px) {
  header {
    padding: 1rem;
  }

  .menu-icon {
    display: none;
  }

  .navbar {
    display: flex;
  }

  .navbar ul {
    display: flex;
    gap: 1rem;
    list-style-type: none;
    padding: 0;
    margin: 0;
  }

  .navbar ul li a {
    text-decoration: none;
    color: black;
  }

  header {
    justify-content: normal;
    padding: 1rem 3rem;
  }

  .separator-line {
    margin: 0 3rem;
  }

  .header-right-icons {
    margin: 0 30px 0 auto;
  }

  .header-image,
  .blog-page-banner-image {
    height: 500px;
  }

  .about-blog {
    display: grid;
    width: 90%;
    grid-gap: 5rem;
    grid-template-areas: "about-grid1 about-grid2 about-grid2";
    margin: 2rem 0;
  }

  .about-grid1 {
    grid-area: about-grid1;
  }

  .about-grid2 {
    grid-area: about-grid2;
  }

  .welcome-content {
    display: flex;
    flex-direction: column;
    gap: 3rem;
    width: 70%;
    align-items: center;
  }

  .quick-link-containers {
    flex-direction: row;
  }

  footer {
    flex-direction: row;
    align-items: normal;
    gap: 2rem;
    text-align: left;
    padding: 1rem 0;
  }

  .footer-first,
  .footer-second,
  .footer-third {
    margin-left: 3rem;
  }

  .footer-fourth {
    display: flex;
    margin: 0 3rem 0 auto;
  }

  .author-section {
    width: 40%;
  }

  .contact-form {
    width: 40%;
    padding-top: 2rem;
    margin-bottom: 3rem;
  }

  .form-input {
    width: 80%;
  }

  h2 {
    width: 40%;
    margin: 2rem 0;
  }

  .footer-icons {
    justify-content: normal;
  }

  .carousel-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: 3rem;
  }

  .blog-page-content {
    width: 70%;
    margin: 2rem 0;
    grid-template-areas:
      "blog-grid1 blog-grid1 blog-grid3"
      "blog-grid2 blog-grid2 blog-grid4";
  }

  .blog-list-container {
    display: grid;
    margin-bottom: 2rem;
    grid-gap: 2rem;
    grid-template-areas:
      "blog-list-grid1 blog-list-grid1 blog-list-grid1 blog-list-grid1"
      "blog-list-grid2 blog-list-grid2 blog-list-grid3 blog-list-grid3"
      "blog-list-grid2 blog-list-grid2 blog-list-grid4 blog-list-grid5";
  }

  .blog-list-grid1 {
    grid-area: blog-list-grid1;
  }

  .blog-list-grid2 {
    grid-area: blog-list-grid2;
  }

  .blog-list-grid3 {
    grid-area: blog-list-grid3;
  }

  .blog-list-grid4 {
    grid-area: blog-list-grid4;
  }

  .blog-list-grid5 {
    grid-area: blog-list-grid5;
  }
}

